[gd_scene load_steps=13 format=3 uid="uid://qgsawqr22xjy"]

[ext_resource type="Script" path="res://modules/overlay_ui/overlay_ui.gd" id="1_eryqm"]
[ext_resource type="Texture2D" uid="uid://bll8736vf7trb" path="res://modules/overlay_ui/assets/tuto.svg" id="4_5df4v"]
[ext_resource type="Texture2D" uid="uid://b52fg0crlh4j2" path="res://modules/overlay_ui/assets/remaining_exorcist_count.svg" id="5_him70"]
[ext_resource type="Texture2D" uid="uid://cpmpwdbm2laq4" path="res://modules/overlay_ui/assets/defeat.svg" id="7_pqv1n"]
[ext_resource type="Texture2D" uid="uid://8jqrbax2qnod" path="res://modules/overlay_ui/assets/victory.svg" id="8_r8h0l"]
[ext_resource type="Texture2D" uid="uid://c7837t3ruslae" path="res://modules/overlay_ui/assets/credits.svg" id="9_kjx3s"]
[ext_resource type="Texture2D" uid="uid://s47idtmyg3e5" path="res://modules/overlay_ui/assets/title.svg" id="10_etjgf"]
[ext_resource type="FontFile" uid="uid://dvj6ydvnxdxy6" path="res://assets/avara.ttf" id="10_j3c3t"]

[sub_resource type="LabelSettings" id="LabelSettings_8w875"]
font = ExtResource("10_j3c3t")
font_size = 128
font_color = Color(0.768627, 0.686275, 0.658824, 1)
outline_size = 4
outline_color = Color(0.760784, 0.439216, 0.439216, 1)
shadow_size = 10
shadow_color = Color(0.654902, 0.439216, 0.760784, 1)
shadow_offset = Vector2(10, 10)

[sub_resource type="LabelSettings" id="LabelSettings_lhjf2"]
font = ExtResource("10_j3c3t")
font_size = 48
font_color = Color(0.768627, 0.686275, 0.658824, 1)
outline_size = 4
outline_color = Color(0.760784, 0.439216, 0.439216, 1)
shadow_size = 10
shadow_color = Color(0.654902, 0.439216, 0.760784, 1)
shadow_offset = Vector2(10, 10)

[sub_resource type="Animation" id="Animation_icigt"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hgvx6"]
_data = {
"RESET": SubResource("Animation_icigt")
}

[node name="overlay_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_eryqm")

[node name="GameplayScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ControlHelper" type="TextureRect" parent="GameplayScreen"]
layout_mode = 1
offset_left = -20.0
offset_top = -12.0
offset_right = 808.0
offset_bottom = 549.0
scale = Vector2(0.45, 0.45)
texture = ExtResource("4_5df4v")

[node name="ExorcistCounter" type="TextureRect" parent="GameplayScreen"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -800.0
offset_top = -7.0
offset_right = 13.0
offset_bottom = 582.0
grow_horizontal = 0
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(813, 0)
texture = ExtResource("5_him70")

[node name="Label" type="Label" parent="GameplayScreen/ExorcistCounter"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -476.667
offset_top = -237.833
offset_right = -245.667
offset_bottom = -29.8329
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(231, 104)
text = "0/6"
label_settings = SubResource("LabelSettings_8w875")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Title" type="Control" parent="MenuScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)

[node name="Credit" type="TextureRect" parent="MenuScreen/Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1155.5
offset_top = -385.0
offset_right = 1155.5
offset_bottom = -85.9999
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_kjx3s")

[node name="Title" type="TextureRect" parent="MenuScreen/Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -710.0
offset_top = -810.0
offset_right = 710.0
offset_bottom = -261.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_etjgf")

[node name="MenuEnd" type="Control" parent="MenuScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuScreen/MenuEnd"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -95.9999
offset_right = 2005.0
offset_bottom = 484.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
alignment = 1

[node name="TextureButtonPlayExit" type="TextureButton" parent="MenuScreen/MenuEnd/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_r8h0l")

[node name="MessageDisplay" type="TextureRect" parent="MenuScreen/MenuEnd/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_pqv1n")

[node name="TextureButtonPlayAgain" type="TextureButton" parent="MenuScreen/MenuEnd/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_r8h0l")

[node name="HBoxContainer" type="HBoxContainer" parent="MenuScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = 136.0
offset_right = 185.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="MenuScreen/HBoxContainer"]
layout_mode = 2
text = "You've been : "
label_settings = SubResource("LabelSettings_lhjf2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="MenuScreen/HBoxContainer"]
layout_mode = 2
text = "Michel"
label_settings = SubResource("LabelSettings_lhjf2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../MenuScreen")
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_hgvx6")
}

[connection signal="pressed" from="MenuScreen/MenuEnd/HBoxContainer/TextureButtonPlayExit" to="." method="_on_texture_button_play_exit_pressed"]
[connection signal="pressed" from="MenuScreen/MenuEnd/HBoxContainer/TextureButtonPlayAgain" to="." method="_on_texture_button_play_again_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
